Update branding to Keystone, modernize dark theme UI

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Page Not Found - TKG Time & Expense{% endblock %}
+{% block title %}Page Not Found - Keystone Time & Expense{% endblock %}
 
 {% block content %}
 <div class="min-vh-100 d-flex align-items-center justify-content-center">
