--- a/templates/timesheets/dashboard.html
+++ b/templates/timesheets/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard - TKG Time & Expense{% endblock %}
+{% block title %}Dashboard - Keystone Time & Expense{% endblock %}
 
 {% block content %}
 <div class="page-header">
