--- a/templates/403.html
+++ b/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Access Denied - TKG Time & Expense{% endblock %}
+{% block title %}Access Denied - Keystone Time & Expense{% endblock %}
 
 {% block content %}
 <div class="min-vh-100 d-flex align-items-center justify-content-center">
