--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Out - TKG Time & Expense{% endblock %}
+{% block title %}Sign Out - Keystone Time & Expense{% endblock %}
 
 {% block content %}
 <div class="min-vh-100 d-flex align-items-center justify-content-center">
